[gd_scene load_steps=22 format=1]

[ext_resource path="res://scripts/hud.gd" type="Script" id=1]
[ext_resource path="res://font/bigm5x7.fnt" type="BitmapFont" id=2]
[ext_resource path="res://font/m5x7.fnt" type="BitmapFont" id=3]
[ext_resource path="res://images/controls/brick_normal.tex" type="Texture" id=4]
[ext_resource path="res://images/controls/brick_pressed.tex" type="Texture" id=5]
[ext_resource path="res://images/controls/brick_disabled.tex" type="Texture" id=6]
[ext_resource path="res://font/smallm5x7.fnt" type="BitmapFont" id=7]
[ext_resource path="res://images/controls/green_brick_normal.tex" type="Texture" id=8]
[ext_resource path="res://images/controls/green_brick_pressed.tex" type="Texture" id=9]
[ext_resource path="res://images/controls/pause_normal.tex" type="Texture" id=10]
[ext_resource path="res://images/controls/pause_pressed.tex" type="Texture" id=11]
[ext_resource path="res://images/controls/pause_pressed_disabled.tex" type="Texture" id=12]
[ext_resource path="res://images/controls/mute_sounds_normal.tex" type="Texture" id=13]
[ext_resource path="res://images/controls/mute_sounds_pressed.tex" type="Texture" id=14]
[ext_resource path="res://images/controls/accept_normal.tex" type="Texture" id=15]
[ext_resource path="res://images/controls/accept_pressed.tex" type="Texture" id=16]
[ext_resource path="res://images/controls/cancel_normal.tex" type="Texture" id=17]
[ext_resource path="res://images/controls/cancel_pressed.tex" type="Texture" id=18]
[ext_resource path="res://images/repeating_horizontal.png" type="Texture" id=19]
[ext_resource path="res://images/controls/purple_bar_brick.tex" type="Texture" id=20]

[sub_resource type="GDScript" id=1]

resource/name = "points_lbl"
script/source = "extends Label

func _ready():
	set_text(str(game.points))
"

[node name="hud" type="CanvasLayer"]

process/pause_mode = 2
layer = 4
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="score lbl" type="Label" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 320.0
margin/top = 10.0
margin/right = 296.0
margin/bottom = 914.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="level lbl" type="Label" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 165.0
custom_fonts/font = ExtResource( 3 )
text = "Level @#$%"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pause popup" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/self_opacity = 0.5
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="pause lbl" type="Label" parent="pause popup"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 3 )
text = "Paused"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="quit btn" type="TextureButton" parent="."]

editor/display_folded = true
visibility/visible = false
anchor/top = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 75.0
margin/right = 498.0
margin/bottom = 949.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
textures/disabled = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 4, 4 )
params/stretch_mode = 0

[node name="quit lbl" type="Label" parent="quit btn"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 126.0
margin/bottom = 60.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="restart btn" type="TextureButton" parent="."]

editor/display_folded = true
visibility/visible = false
anchor/top = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 154.0
margin/top = 75.0
margin/right = 358.0
margin/bottom = 949.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
textures/disabled = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 4, 4 )
params/stretch_mode = 0

[node name="quit lbl" type="Label" parent="restart btn"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 126.0
margin/bottom = 60.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Restart"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pause btn" type="TextureButton" parent="."]

anchor/left = 1
anchor/top = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 75.0
margin/right = 624.0
margin/bottom = 949.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/pressed = ExtResource( 11 )
textures/disabled = ExtResource( 12 )
params/resize_mode = 0
params/scale = Vector2( 4, 4 )
params/stretch_mode = 0

[node name="mute sounds btn" type="TextureButton" parent="."]

anchor/left = 1
anchor/top = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 178.0
margin/top = 75.0
margin/right = 526.0
margin/bottom = 949.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
textures/pressed = ExtResource( 14 )
params/resize_mode = 0
params/scale = Vector2( 4, 4 )
params/stretch_mode = 0

[node name="quit popup" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/self_opacity = 0.5
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="confirm lbl" type="Label" parent="quit popup"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 3 )
text = "Are you sure you want to quit?"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="yes btn" type="TextureButton" parent="quit popup"]

anchor/left = 3
anchor/top = 1
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 138.0
margin/top = 420.0
margin/right = 394.0
margin/bottom = -124.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 15 )
textures/pressed = ExtResource( 16 )
params/resize_mode = 0
params/scale = Vector2( 4, 4 )
params/stretch_mode = 0

[node name="no btn" type="TextureButton" parent="quit popup"]

anchor/left = 1
anchor/top = 1
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 262.0
margin/top = 420.0
margin/right = -122.0
margin/bottom = -124.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 17 )
textures/pressed = ExtResource( 18 )
params/resize_mode = 0
params/scale = Vector2( 4, 4 )
params/stretch_mode = 0

[node name="ui bar" type="TextureFrame" parent="."]

anchor/top = 1
anchor/right = 1
rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -24.0
margin/top = 128.0
margin/right = -2120.0
margin/bottom = 968.0
texture = ExtResource( 19 )
stretch_mode = 2

[node name="points bar" type="TextureFrame" parent="."]

anchor/left = 1
anchor/top = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 352.0
margin/top = 88.0
margin/right = 320.0
margin/bottom = 888.0
texture = ExtResource( 20 )
stretch_mode = 0

[node name="points lbl" type="Label" parent="."]

anchor/left = 1
anchor/top = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 304.0
margin/top = 80.0
margin/right = 387.0
margin/bottom = 895.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Points"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="points" type="Label" parent="."]

anchor/left = 1
anchor/top = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 346.0
margin/top = 45.0
margin/right = 434.0
margin/bottom = 951.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = SubResource( 1 )

[connection signal="pressed" from="quit btn" to="." method="_on_quit_btn_pressed"]

[connection signal="pressed" from="restart btn" to="." method="_on_restart_btn_pressed"]

[connection signal="toggled" from="pause btn" to="." method="set_pause"]

[connection signal="toggled" from="mute sounds btn" to="." method="_on_mute_sounds_btn_toggled"]

[connection signal="pressed" from="quit popup/yes btn" to="." method="_on_quit_popup_yes_btn_pressed"]

[connection signal="pressed" from="quit popup/no btn" to="." method="_on_quit_popup_no_btn_pressed"]


